[package]
name = "rust-admin"
version = "0.1.0"
authors = ["zengjie <1063423131@qq.com>"]
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
time = { version = "*", features = ["local-offset", "serde-human-readable"] }

getset = "*"

#lazy
once_cell = "*"